compiler/fir/analysis-tests/testData/resolve/topLevelDestructuring2.kt
// RUN_PIPELINE_TILL: FRONTEND
class C {
    val <!SYNTAX!>(x, y)<!> = Pair(1, 2)
}
